Fixed some typos

--- a/Assignment3.1.ipynb
+++ b/Assignment3.1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "4                 0.661515           39.029373                    0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Already, we can see mutliple varibles that can be removed prior to building a model. 'Thumbnail link' can be removed, but we might want to include 'Video Title' to see if certain key phrases can increase video views. 'External Video ID' is present in each data frame, so this will be kept to join the data frames together in the future prior to modeling. Once this is accomplished, \"External Video ID' will be removed to stop it from hindering model performance. "
+    "Already, we can see multiple variables that can be removed prior to building a model. 'Thumbnail link' can be removed, but we might want to include 'Video Title' to see if certain key phrases can increase video views. 'External Video ID' is present in each data frame, so this will be kept to join the data frames together in the future prior to modeling. Once this is accomplished, \"External Video ID' will be removed to stop it from hindering model performance. "
    ]
   },
   {
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are the data types of each feature. Most of the data types are int, with only 1 boolian and 2 floats. The most important string data type in our data set will either be 'Country Code' or 'Video Title' depending on if we can extract key words from the title or not."
+    "Here are the data types of each feature. Most of the data types are int, with only 1 boolean and 2 floats. The most important string data type in our data set will either be 'Country Code' or 'Video Title' depending on if we can extract key words from the title or not."
    ]
   },
   {
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this chart, we can see most of the data will come from these top 10 countries. This can introduce bias to our data set due to views mostly coming from a few countires (out of the 233 countires that view these videos). This will be an important aspect to consider going forward due to our model most likely giving insights that will reach American audiences more so than other countires. "
+    "From this chart, we can see most of the data will come from these top 10 countries. This can introduce bias to our data set due to views mostly coming from a few countires (out of the 234 countires that view these videos). This will be an important aspect to consider going forward due to our model most likely giving insights that will reach American and Indian audiences more so than other countires. "
    ]
   },
   {
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of the countries with the most views appeared on this list, indicating that average watch time by country can be influnced by a smaller number of people watching. The less viewers in a country, the higher the varience. "
+    "None of the countries with the most views appeared on this list, indicating that average watch time by country can be influenced by a smaller number of people watching. The less viewers in a country, the higher the variance."
    ]
   },
   {
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 3 most common words that are not dash or an artical are 'Data,' 'Science,' and 'How.' In the future, we can create boolian features of these words to indicate if they appear in the title or not and see how well they do at helping predict views and likes."
+    "The 3 most common words that are not dash or an article are 'Data,' 'Science,' and 'How.' In the future, we can create boolean features of these words to indicate if they appear in the title or not and see how well they do at helping predict views and likes."
    ]
   }
  ],
