--- a/ADS508.ipynb
+++ b/ADS508.ipynb
@@ -1235,8 +1235,7 @@
     }
    ],
    "source": [
-    "heads = {\n",
-    "    'family': 'Arial',\n",
+    "heads = {
     "    'weight': 'bold',\n",
     "    'size' : 20,\n",
     "}\n",
