NOT FINISHED data transformation 2

--- a/Assignment4.1.ipynb
+++ b/Assignment4.1.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -268,12 +268,12 @@
     "    row = row + 1\n",
     "\n",
     "# Now, we will remove features which are not needed\n",
-    "transform_video.drop(['Video title', 'Video pub­lish time', 'RPM (USD)', 'CPM (USD)', 'Video_Day_Published', 'Av­er­age view dur­a­tion', 'Likes', 'Dis­likes'], axis = 1, inplace = True)"
+    "transform_video.drop(['Video title', 'Video pub­lish time', 'RPM (USD)', 'CPM (USD)', 'Video_Day_Published', 'Av­er­age view dur­a­tion', 'Likes', 'Dis­likes', 'Sub­scribers lost', 'Sub­scribers gained'], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -300,14 +300,12 @@
        "      <th>Video</th>\n",
        "      <th>Com­ments ad­ded</th>\n",
        "      <th>Shares</th>\n",
-       "      <th>Sub­scribers lost</th>\n",
-       "      <th>Sub­scribers gained</th>\n",
        "      <th>Av­er­age per­cent­age viewed (%)</th>\n",
        "      <th>Views</th>\n",
        "      <th>Watch time (hours)</th>\n",
        "      <th>Sub­scribers</th>\n",
        "      <th>Your es­tim­ated rev­en­ue (USD)</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Im­pres­sions</th>\n",
        "      <th>Im­pres­sions click-through rate (%)</th>\n",
        "      <th>Monday</th>\n",
        "      <th>Saturday</th>\n",
@@ -326,14 +324,12 @@
        "      <td>4OZip0cgOho</td>\n",
        "      <td>907</td>\n",
        "      <td>9583</td>\n",
-       "      <td>451</td>\n",
-       "      <td>46904</td>\n",
        "      <td>36.65</td>\n",
        "      <td>1253559</td>\n",
        "      <td>65850.7042</td>\n",
        "      <td>46453</td>\n",
        "      <td>7959.533</td>\n",
-       "      <td>...</td>\n",
+       "      <td>26498799</td>\n",
        "      <td>3.14</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -350,14 +346,12 @@
        "      <td>78LjdAAw0wA</td>\n",
        "      <td>412</td>\n",
        "      <td>4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>12</td>\n",
        "      <td>6.26</td>\n",
        "      <td>2291</td>\n",
        "      <td>200.2966</td>\n",
        "      <td>-3</td>\n",
        "      <td>6.113</td>\n",
-       "      <td>...</td>\n",
+       "      <td>188318</td>\n",
        "      <td>0.72</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -374,14 +368,12 @@
        "      <td>hO_YKK_0Qck</td>\n",
        "      <td>402</td>\n",
        "      <td>152</td>\n",
-       "      <td>9</td>\n",
-       "      <td>198</td>\n",
        "      <td>15.12</td>\n",
        "      <td>21350</td>\n",
        "      <td>3687.3387</td>\n",
        "      <td>189</td>\n",
        "      <td>202.963</td>\n",
-       "      <td>...</td>\n",
+       "      <td>442334</td>\n",
        "      <td>2.53</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -398,14 +390,12 @@
        "      <td>uXLnbdHMf8w</td>\n",
        "      <td>375</td>\n",
        "      <td>367</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1957</td>\n",
        "      <td>33.41</td>\n",
        "      <td>49564</td>\n",
        "      <td>2148.3110</td>\n",
        "      <td>1917</td>\n",
        "      <td>155.779</td>\n",
-       "      <td>...</td>\n",
+       "      <td>521185</td>\n",
        "      <td>4.01</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -422,14 +412,12 @@
        "      <td>Xgg7dIKys9E</td>\n",
        "      <td>329</td>\n",
        "      <td>118</td>\n",
-       "      <td>11</td>\n",
-       "      <td>161</td>\n",
        "      <td>9.55</td>\n",
        "      <td>13429</td>\n",
        "      <td>1034.3945</td>\n",
        "      <td>150</td>\n",
        "      <td>39.920</td>\n",
-       "      <td>...</td>\n",
+       "      <td>210876</td>\n",
        "      <td>3.38</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -443,30 +431,29 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Video  Com­ments ad­ded  Shares  Sub­scribers lost  \\\n",
-       "0  4OZip0cgOho               907    9583                451   \n",
-       "1  78LjdAAw0wA               412       4                 15   \n",
-       "2  hO_YKK_0Qck               402     152                  9   \n",
-       "3  uXLnbdHMf8w               375     367                 40   \n",
-       "4  Xgg7dIKys9E               329     118                 11   \n",
+       "         Video  Com­ments ad­ded  Shares  Av­er­age per­cent­age viewed (%)  \\\n",
+       "0  4OZip0cgOho               907    9583                              36.65   \n",
+       "1  78LjdAAw0wA               412       4                               6.26   \n",
+       "2  hO_YKK_0Qck               402     152                              15.12   \n",
+       "3  uXLnbdHMf8w               375     367                              33.41   \n",
+       "4  Xgg7dIKys9E               329     118                               9.55   \n",
        "\n",
-       "   Sub­scribers gained  Av­er­age per­cent­age viewed (%)    Views  \\\n",
-       "0                46904                              36.65  1253559   \n",
-       "1                   12                               6.26     2291   \n",
-       "2                  198                              15.12    21350   \n",
-       "3                 1957                              33.41    49564   \n",
-       "4                  161                               9.55    13429   \n",
+       "     Views  Watch time (hours)  Sub­scribers  \\\n",
+       "0  1253559          65850.7042         46453   \n",
+       "1     2291            200.2966            -3   \n",
+       "2    21350           3687.3387           189   \n",
+       "3    49564           2148.3110          1917   \n",
+       "4    13429           1034.3945           150   \n",
        "\n",
-       "   Watch time (hours)  Sub­scribers  Your es­tim­ated rev­en­ue (USD)  ...  \\\n",
-       "0          65850.7042         46453                          7959.533  ...   \n",
-       "1            200.2966            -3                             6.113  ...   \n",
-       "2           3687.3387           189                           202.963  ...   \n",
-       "3           2148.3110          1917                           155.779  ...   \n",
-       "4           1034.3945           150                            39.920  ...   \n",
+       "   Your es­tim­ated rev­en­ue (USD)  Im­pres­sions  \\\n",
+       "0                          7959.533       26498799   \n",
+       "1                             6.113         188318   \n",
+       "2                           202.963         442334   \n",
+       "3                           155.779         521185   \n",
+       "4                            39.920         210876   \n",
        "\n",
        "   Im­pres­sions click-through rate (%)  Monday  Saturday  Sunday  Thursday  \\\n",
        "0                                  3.14       0         0       0         0   \n",
@@ -487,12 +474,10 @@
        "1               32.50  \n",
        "2               58.73  \n",
        "3              119.18  \n",
-       "4               39.33  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "4               39.33  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
