--- a/Assignment4.1.ipynb
+++ b/Assignment4.1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4       -zbLpoJVBMI                    4                  17"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,6 @@
     "            IN_views = video_split.iloc[i, 2]\n",
     "        else:\n",
     "            other_views = video_split.iloc[i, 2]\n",
-    "        row = row + 1\n",
     "        world_views = world_views + other_views  \n",
     "    test.loc[testRow,'USA_views'] = USA_views\n",
     "    test.loc[testRow, 'IN_views'] = IN_views\n",
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +315,7 @@
        "4       s1gD35Z4eUc    11.1441   6.63136               82.2246"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +628,7 @@
        "4               39.33  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +719,7 @@
        "-zbLpoJVBMI                 368"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,18 +746,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '5EZE7JNXSH0TMFR6',\n",
-       "  'HostId': 'lr0spY/Y5uOSotqrNMi9OIrwvb2ys/5jyddF3qnUz8WRGVsiODTAipRUfdmDnzdE3MIRmxIB8nY=',\n",
+       "{'ResponseMetadata': {'RequestId': 'RHGNGSBYASTZD3M9',\n",
+       "  'HostId': '+mCKNz9cV17PpwIqXbwtFZpVcfELbkDemxxUxarPx4tU4wQ4kEbkNeW71HdwHtORByc9Fb0h1Wc=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'lr0spY/Y5uOSotqrNMi9OIrwvb2ys/5jyddF3qnUz8WRGVsiODTAipRUfdmDnzdE3MIRmxIB8nY=',\n",
-       "   'x-amz-request-id': '5EZE7JNXSH0TMFR6',\n",
-       "   'date': 'Sun, 27 Mar 2022 02:10:15 GMT',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': '+mCKNz9cV17PpwIqXbwtFZpVcfELbkDemxxUxarPx4tU4wQ4kEbkNeW71HdwHtORByc9Fb0h1Wc=',\n",
+       "   'x-amz-request-id': 'RHGNGSBYASTZD3M9',\n",
+       "   'date': 'Sun, 27 Mar 2022 02:16:55 GMT',\n",
        "   'etag': '\"b7306ff17b3f7e1468632a6d0b21bf27\"',\n",
        "   'server': 'AmazonS3',\n",
        "   'content-length': '0'},\n",
@@ -766,7 +765,7 @@
        " 'ETag': '\"b7306ff17b3f7e1468632a6d0b21bf27\"'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1000,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
