--- a/Assignment4.1.ipynb
+++ b/Assignment4.1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4       -zbLpoJVBMI                    4                  17"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "4       s1gD35Z4eUc    11.1441   6.63136               82.2246"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "4               39.33  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Performance_altered = Performance_df[['External Video ID', 'Video Length']]\n",
+    "transformed_performance = Performance_altered.groupby(by = 'External Video ID').max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -719,14 +729,12 @@
        "-zbLpoJVBMI                 368"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Performance_altered = Performance_df[['External Video ID', 'Video Length']]\n",
-    "transformed_performance = Performance_altered.groupby(by = 'External Video ID').max()\n",
     "transformed_performance.head()"
    ]
   },
@@ -746,26 +754,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'RHGNGSBYASTZD3M9',\n",
-       "  'HostId': '+mCKNz9cV17PpwIqXbwtFZpVcfELbkDemxxUxarPx4tU4wQ4kEbkNeW71HdwHtORByc9Fb0h1Wc=',\n",
+       "{'ResponseMetadata': {'RequestId': 'K8971JFBZAYETGVP',\n",
+       "  'HostId': 'yUvEEeXfgFp/MiHiic/9sJ0JgSDuEAfk1bd2NKTdtGtDSHxZFkzqKAwtGZEyEwHZCneLCqMs3MA=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': '+mCKNz9cV17PpwIqXbwtFZpVcfELbkDemxxUxarPx4tU4wQ4kEbkNeW71HdwHtORByc9Fb0h1Wc=',\n",
-       "   'x-amz-request-id': 'RHGNGSBYASTZD3M9',\n",
-       "   'date': 'Sun, 27 Mar 2022 02:16:55 GMT',\n",
-       "   'etag': '\"b7306ff17b3f7e1468632a6d0b21bf27\"',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'yUvEEeXfgFp/MiHiic/9sJ0JgSDuEAfk1bd2NKTdtGtDSHxZFkzqKAwtGZEyEwHZCneLCqMs3MA=',\n",
+       "   'x-amz-request-id': 'K8971JFBZAYETGVP',\n",
+       "   'date': 'Mon, 28 Mar 2022 04:37:23 GMT',\n",
+       "   'etag': '\"90053ce4494813c2d19397a554c7be67\"',\n",
        "   'server': 'AmazonS3',\n",
        "   'content-length': '0'},\n",
        "  'RetryAttempts': 0},\n",
-       " 'ETag': '\"b7306ff17b3f7e1468632a6d0b21bf27\"'}"
+       " 'ETag': '\"90053ce4494813c2d19397a554c7be67\"'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,16 +787,24 @@
     "# dropping video id\n",
     "df_merge_final.drop(['External Video ID'], axis  = 1, inplace = True)\n",
     "\n",
+    "# The last step is to normalize our data due to having different units\n",
+    "normalized_df = df_merge_final[['Video Length', 'USA%_veiws', 'IN%_views', 'Other_country%_ views', 'Com­ments ad­ded', 'Shares', 'Av­er­age per­cent­age viewed (%)', \n",
+    "                                'Views', 'Watch time (hours)', 'Sub­scribers', 'Im­pres­sions', 'Im­pres­sions click-through rate (%)', 'Average_view_duration_(s)', \n",
+    "                                'Like_Dislike_Ratio', 'Reply_Comment_Count', 'Like_Comment_Count']]\n",
+    "not_normalized_df = df_merge_final[['Monday', 'Saturday', 'Sunday', 'Thursday', 'Tuesday', 'Wednesday', 'DateScience?', 'Your es­tim­ated rev­en­ue (USD)']]\n",
+    "normalized_df = (normalized_df-normalized_df.mean())/normalized_df.std()\n",
+    "final_df = pd.concat([normalized_df, not_normalized_df], axis = 1)\n",
+    "\n",
     "# uploading to S3 bucket\n",
     "csv_buffer = StringIO()\n",
-    "df_merge_final.to_csv(csv_buffer)\n",
+    "final_df.to_csv(csv_buffer)\n",
     "s3_resource = boto3.resource('s3')\n",
     "s3_resource.Object(BUCKET, 'training_df.csv').put(Body = csv_buffer.getvalue())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -823,138 +839,138 @@
        "      <th>Watch time (hours)</th>\n",
        "      <th>Sub­scribers</th>\n",
        "      <th>...</th>\n",
+       "      <th>Reply_Comment_Count</th>\n",
+       "      <th>Like_Comment_Count</th>\n",
+       "      <th>Monday</th>\n",
        "      <th>Saturday</th>\n",
        "      <th>Sunday</th>\n",
        "      <th>Thursday</th>\n",
        "      <th>Tuesday</th>\n",
        "      <th>Wednesday</th>\n",
        "      <th>DateScience?</th>\n",
-       "      <th>Average_view_duration_(s)</th>\n",
-       "      <th>Like_Dislike_Ratio</th>\n",
-       "      <th>Reply_Comment_Count</th>\n",
-       "      <th>Like_Comment_Count</th>\n",
+       "      <th>Your es­tim­ated rev­en­ue (USD)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3413</td>\n",
-       "      <td>5.58559</td>\n",
-       "      <td>23.4835</td>\n",
-       "      <td>70.9309</td>\n",
-       "      <td>317</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10.40</td>\n",
-       "      <td>2326</td>\n",
-       "      <td>229.4255</td>\n",
-       "      <td>-5</td>\n",
+       "      <td>2.579757</td>\n",
+       "      <td>-1.44081</td>\n",
+       "      <td>1.50307</td>\n",
+       "      <td>0.28212</td>\n",
+       "      <td>2.734322</td>\n",
+       "      <td>-0.233125</td>\n",
+       "      <td>-1.577538</td>\n",
+       "      <td>-0.254334</td>\n",
+       "      <td>-0.250611</td>\n",
+       "      <td>-0.178416</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.564266</td>\n",
+       "      <td>-0.404023</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>355</td>\n",
-       "      <td>68.50</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>326</td>\n",
-       "      <td>8.1295</td>\n",
-       "      <td>4.53237</td>\n",
-       "      <td>87.3381</td>\n",
-       "      <td>37</td>\n",
-       "      <td>43</td>\n",
-       "      <td>48.50</td>\n",
-       "      <td>4383</td>\n",
-       "      <td>192.5779</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-0.599770</td>\n",
+       "      <td>-1.15966</td>\n",
+       "      <td>-1.19712</td>\n",
+       "      <td>2.14297</td>\n",
+       "      <td>-0.296311</td>\n",
+       "      <td>-0.185918</td>\n",
+       "      <td>0.933759</td>\n",
+       "      <td>-0.231628</td>\n",
+       "      <td>-0.258198</td>\n",
+       "      <td>-0.175695</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.216780</td>\n",
+       "      <td>-0.104950</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>158</td>\n",
-       "      <td>33.38</td>\n",
-       "      <td>4</td>\n",
-       "      <td>21</td>\n",
+       "      <td>16.549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5005</td>\n",
-       "      <td>25.0561</td>\n",
-       "      <td>5.32511</td>\n",
-       "      <td>69.6188</td>\n",
-       "      <td>13</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5.23</td>\n",
-       "      <td>2271</td>\n",
-       "      <td>165.2476</td>\n",
-       "      <td>-21</td>\n",
+       "      <td>4.219474</td>\n",
+       "      <td>0.71106</td>\n",
+       "      <td>-1.08417</td>\n",
+       "      <td>0.133307</td>\n",
+       "      <td>-0.556079</td>\n",
+       "      <td>-0.233125</td>\n",
+       "      <td>-1.918310</td>\n",
+       "      <td>-0.254942</td>\n",
+       "      <td>-0.263825</td>\n",
+       "      <td>-0.183254</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.216780</td>\n",
+       "      <td>-0.366639</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>261</td>\n",
-       "      <td>15.50</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.929</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>370</td>\n",
-       "      <td>6.516</td>\n",
-       "      <td>21.5732</td>\n",
-       "      <td>71.9108</td>\n",
-       "      <td>35</td>\n",
-       "      <td>19</td>\n",
-       "      <td>43.53</td>\n",
-       "      <td>4252</td>\n",
-       "      <td>190.2194</td>\n",
-       "      <td>13</td>\n",
+       "      <td>-0.554452</td>\n",
+       "      <td>-1.33799</td>\n",
+       "      <td>1.2309</td>\n",
+       "      <td>0.39325</td>\n",
+       "      <td>-0.317958</td>\n",
+       "      <td>-0.218289</td>\n",
+       "      <td>0.606170</td>\n",
+       "      <td>-0.233074</td>\n",
+       "      <td>-0.258683</td>\n",
+       "      <td>-0.172974</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.130706</td>\n",
+       "      <td>-0.310563</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>161</td>\n",
-       "      <td>219.00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25.224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>482</td>\n",
-       "      <td>31.1878</td>\n",
-       "      <td>8.38107</td>\n",
-       "      <td>60.4311</td>\n",
-       "      <td>9</td>\n",
-       "      <td>38</td>\n",
-       "      <td>44.37</td>\n",
-       "      <td>8420</td>\n",
-       "      <td>500.1532</td>\n",
-       "      <td>165</td>\n",
+       "      <td>-0.439095</td>\n",
+       "      <td>1.38874</td>\n",
+       "      <td>-0.648748</td>\n",
+       "      <td>-0.908732</td>\n",
+       "      <td>-0.599374</td>\n",
+       "      <td>-0.192662</td>\n",
+       "      <td>0.661537</td>\n",
+       "      <td>-0.187065</td>\n",
+       "      <td>-0.194867</td>\n",
+       "      <td>-0.127014</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.564266</td>\n",
+       "      <td>-0.422715</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>213</td>\n",
-       "      <td>193.50</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.664</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -963,50 +979,50 @@
       ],
       "text/plain": [
        "   Video Length USA%_veiws IN%_views Other_country%_ views  Com­ments ad­ded  \\\n",
-       "0          3413    5.58559   23.4835               70.9309               317   \n",
-       "1           326     8.1295   4.53237               87.3381                37   \n",
-       "2          5005    25.0561   5.32511               69.6188                13   \n",
-       "3           370      6.516   21.5732               71.9108                35   \n",
-       "4           482    31.1878   8.38107               60.4311                 9   \n",
+       "0      2.579757   -1.44081   1.50307               0.28212          2.734322   \n",
+       "1     -0.599770   -1.15966  -1.19712               2.14297         -0.296311   \n",
+       "2      4.219474    0.71106  -1.08417              0.133307         -0.556079   \n",
+       "3     -0.554452   -1.33799    1.2309               0.39325         -0.317958   \n",
+       "4     -0.439095    1.38874 -0.648748             -0.908732         -0.599374   \n",
        "\n",
-       "   Shares  Av­er­age per­cent­age viewed (%)  Views  Watch time (hours)  \\\n",
-       "0       8                              10.40   2326            229.4255   \n",
-       "1      43                              48.50   4383            192.5779   \n",
-       "2       8                               5.23   2271            165.2476   \n",
-       "3      19                              43.53   4252            190.2194   \n",
-       "4      38                              44.37   8420            500.1532   \n",
+       "     Shares  Av­er­age per­cent­age viewed (%)     Views  Watch time (hours)  \\\n",
+       "0 -0.233125                          -1.577538 -0.254334           -0.250611   \n",
+       "1 -0.185918                           0.933759 -0.231628           -0.258198   \n",
+       "2 -0.233125                          -1.918310 -0.254942           -0.263825   \n",
+       "3 -0.218289                           0.606170 -0.233074           -0.258683   \n",
+       "4 -0.192662                           0.661537 -0.187065           -0.194867   \n",
        "\n",
-       "   Sub­scribers  ...  Saturday  Sunday  Thursday  Tuesday  Wednesday  \\\n",
-       "0            -5  ...         1       0         0        0          0   \n",
-       "1             4  ...         0       0         0        0          0   \n",
-       "2           -21  ...         0       0         0        0          0   \n",
-       "3            13  ...         0       0         0        0          0   \n",
-       "4           165  ...         1       0         0        0          0   \n",
+       "   Sub­scribers  ...  Reply_Comment_Count  Like_Comment_Count  Monday  \\\n",
+       "0     -0.178416  ...            -0.564266           -0.404023       0   \n",
+       "1     -0.175695  ...            -0.216780           -0.104950       1   \n",
+       "2     -0.183254  ...            -0.216780           -0.366639       0   \n",
+       "3     -0.172974  ...             0.130706           -0.310563       0   \n",
+       "4     -0.127014  ...            -0.564266           -0.422715       0   \n",
        "\n",
-       "   DateScience?  Average_view_duration_(s)  Like_Dislike_Ratio  \\\n",
-       "0             0                        355               68.50   \n",
-       "1             0                        158               33.38   \n",
-       "2             0                        261               15.50   \n",
-       "3             0                        161              219.00   \n",
-       "4             1                        213              193.50   \n",
+       "   Saturday  Sunday  Thursday  Tuesday  Wednesday  DateScience?  \\\n",
+       "0         1       0         0        0          0             0   \n",
+       "1         0       0         0        0          0             0   \n",
+       "2         0       0         0        0          0             0   \n",
+       "3         0       0         0        0          0             0   \n",
+       "4         1       0         0        0          0             1   \n",
        "\n",
-       "   Reply_Comment_Count  Like_Comment_Count  \n",
-       "0                    3                   5  \n",
-       "1                    4                  21  \n",
-       "2                    4                   7  \n",
-       "3                    5                  10  \n",
-       "4                    3                   4  \n",
+       "   Your es­tim­ated rev­en­ue (USD)  \n",
+       "0                             5.318  \n",
+       "1                            16.549  \n",
+       "2                             5.929  \n",
+       "3                            25.224  \n",
+       "4                            41.664  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merge_final.head()"
+    "final_df.head()"
    ]
   }
  ],
