Created training, testing, and validation datasets

--- a/Assignment4.1.ipynb
+++ b/Assignment4.1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
     "from io import StringIO\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "s3_client = boto3.client(\"s3\")\n",
     "\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
        "4       -zbLpoJVBMI                    4                  17"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
        "4       s1gD35Z4eUc    11.1441   6.63136               82.2246"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +389,7 @@
     "        test.iloc[row, 0] = 0\n",
     "    row = row + 1\n",
     "\n",
-    "test.rename(columns = {0: 'DateScience?'}, inplace = True)\n",
+    "test.rename(columns = {0: 'DataScience?'}, inplace = True)\n",
     "transform_video = pd.concat([transform_video, test], axis = 1)\n",
     "\n",
     "# changing average view duration to seconds format\n",
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +465,7 @@
        "      <th>Thursday</th>\n",
        "      <th>Tuesday</th>\n",
        "      <th>Wednesday</th>\n",
-       "      <th>DateScience?</th>\n",
+       "      <th>DataScience?</th>\n",
        "      <th>Average_view_duration_(s)</th>\n",
        "      <th>Like_Dislike_Ratio</th>\n",
        "    </tr>\n",
@@ -613,7 +614,7 @@
        "3                                  4.01       0         1       0         0   \n",
        "4                                  3.38       0         0       0         0   \n",
        "\n",
-       "   Tuesday  Wednesday  DateScience?  Average_view_duration_(s)  \\\n",
+       "   Tuesday  Wednesday  DataScience?  Average_view_duration_(s)  \\\n",
        "0        0          0             1                        189   \n",
        "1        0          0             0                        314   \n",
        "2        0          0             0                        621   \n",
@@ -628,7 +629,7 @@
        "4               39.33  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +730,7 @@
        "-zbLpoJVBMI                 368"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,31 +750,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging Data into one Data Frame and Writing to S3 Bucket"
+    "## Merging Data into one Data Frame, Normalizing, Splitting Data, and Writing to S3 Bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'K8971JFBZAYETGVP',\n",
-       "  'HostId': 'yUvEEeXfgFp/MiHiic/9sJ0JgSDuEAfk1bd2NKTdtGtDSHxZFkzqKAwtGZEyEwHZCneLCqMs3MA=',\n",
+       "{'ResponseMetadata': {'RequestId': 'HC5GT893PGXG0A4X',\n",
+       "  'HostId': 'lCEwK7qlEU9lS5HhvVuBbHYfm8LGAa7kZ8qjrU9nHabKFgMKYt2rSI6WbfhGO91WSZZ0eDaQYOs=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'yUvEEeXfgFp/MiHiic/9sJ0JgSDuEAfk1bd2NKTdtGtDSHxZFkzqKAwtGZEyEwHZCneLCqMs3MA=',\n",
-       "   'x-amz-request-id': 'K8971JFBZAYETGVP',\n",
-       "   'date': 'Mon, 28 Mar 2022 04:37:23 GMT',\n",
-       "   'etag': '\"90053ce4494813c2d19397a554c7be67\"',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'lCEwK7qlEU9lS5HhvVuBbHYfm8LGAa7kZ8qjrU9nHabKFgMKYt2rSI6WbfhGO91WSZZ0eDaQYOs=',\n",
+       "   'x-amz-request-id': 'HC5GT893PGXG0A4X',\n",
+       "   'date': 'Mon, 28 Mar 2022 21:23:03 GMT',\n",
+       "   'etag': '\"f6b7b796698b2215c03e1ed712476874\"',\n",
        "   'server': 'AmazonS3',\n",
        "   'content-length': '0'},\n",
        "  'RetryAttempts': 0},\n",
-       " 'ETag': '\"90053ce4494813c2d19397a554c7be67\"'}"
+       " 'ETag': '\"f6b7b796698b2215c03e1ed712476874\"'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,238 +792,32 @@
     "normalized_df = df_merge_final[['Video Length', 'USA%_veiws', 'IN%_views', 'Other_country%_ views', 'Com­ments ad­ded', 'Shares', 'Av­er­age per­cent­age viewed (%)', \n",
     "                                'Views', 'Watch time (hours)', 'Sub­scribers', 'Im­pres­sions', 'Im­pres­sions click-through rate (%)', 'Average_view_duration_(s)', \n",
     "                                'Like_Dislike_Ratio', 'Reply_Comment_Count', 'Like_Comment_Count']]\n",
-    "not_normalized_df = df_merge_final[['Monday', 'Saturday', 'Sunday', 'Thursday', 'Tuesday', 'Wednesday', 'DateScience?', 'Your es­tim­ated rev­en­ue (USD)']]\n",
+    "not_normalized_df = df_merge_final[['Monday', 'Saturday', 'Sunday', 'Thursday', 'Tuesday', 'Wednesday', 'DataScience?', 'Your es­tim­ated rev­en­ue (USD)']]\n",
     "normalized_df = (normalized_df-normalized_df.mean())/normalized_df.std()\n",
     "final_df = pd.concat([normalized_df, not_normalized_df], axis = 1)\n",
     "\n",
-    "# uploading to S3 bucket\n",
+    "# Splitting data\n",
+    "training, rem = train_test_split(final_df, train_size=0.8, random_state=42)\n",
+    "valid, test = train_test_split(rem, train_size=0.5, random_state=42)\n",
+    "training = pd.concat([training, training, training], axis = 0)\n",
+    "\n",
+    "# uploading training to S3 bucket\n",
     "csv_buffer = StringIO()\n",
-    "final_df.to_csv(csv_buffer)\n",
+    "training.to_csv(csv_buffer)\n",
     "s3_resource = boto3.resource('s3')\n",
-    "s3_resource.Object(BUCKET, 'training_df.csv').put(Body = csv_buffer.getvalue())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Video Length</th>\n",
-       "      <th>USA%_veiws</th>\n",
-       "      <th>IN%_views</th>\n",
-       "      <th>Other_country%_ views</th>\n",
-       "      <th>Com­ments ad­ded</th>\n",
-       "      <th>Shares</th>\n",
-       "      <th>Av­er­age per­cent­age viewed (%)</th>\n",
-       "      <th>Views</th>\n",
-       "      <th>Watch time (hours)</th>\n",
-       "      <th>Sub­scribers</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Reply_Comment_Count</th>\n",
-       "      <th>Like_Comment_Count</th>\n",
-       "      <th>Monday</th>\n",
-       "      <th>Saturday</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <th>Thursday</th>\n",
-       "      <th>Tuesday</th>\n",
-       "      <th>Wednesday</th>\n",
-       "      <th>DateScience?</th>\n",
-       "      <th>Your es­tim­ated rev­en­ue (USD)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.579757</td>\n",
-       "      <td>-1.44081</td>\n",
-       "      <td>1.50307</td>\n",
-       "      <td>0.28212</td>\n",
-       "      <td>2.734322</td>\n",
-       "      <td>-0.233125</td>\n",
-       "      <td>-1.577538</td>\n",
-       "      <td>-0.254334</td>\n",
-       "      <td>-0.250611</td>\n",
-       "      <td>-0.178416</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.564266</td>\n",
-       "      <td>-0.404023</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.599770</td>\n",
-       "      <td>-1.15966</td>\n",
-       "      <td>-1.19712</td>\n",
-       "      <td>2.14297</td>\n",
-       "      <td>-0.296311</td>\n",
-       "      <td>-0.185918</td>\n",
-       "      <td>0.933759</td>\n",
-       "      <td>-0.231628</td>\n",
-       "      <td>-0.258198</td>\n",
-       "      <td>-0.175695</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.216780</td>\n",
-       "      <td>-0.104950</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16.549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.219474</td>\n",
-       "      <td>0.71106</td>\n",
-       "      <td>-1.08417</td>\n",
-       "      <td>0.133307</td>\n",
-       "      <td>-0.556079</td>\n",
-       "      <td>-0.233125</td>\n",
-       "      <td>-1.918310</td>\n",
-       "      <td>-0.254942</td>\n",
-       "      <td>-0.263825</td>\n",
-       "      <td>-0.183254</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.216780</td>\n",
-       "      <td>-0.366639</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.554452</td>\n",
-       "      <td>-1.33799</td>\n",
-       "      <td>1.2309</td>\n",
-       "      <td>0.39325</td>\n",
-       "      <td>-0.317958</td>\n",
-       "      <td>-0.218289</td>\n",
-       "      <td>0.606170</td>\n",
-       "      <td>-0.233074</td>\n",
-       "      <td>-0.258683</td>\n",
-       "      <td>-0.172974</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.130706</td>\n",
-       "      <td>-0.310563</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.439095</td>\n",
-       "      <td>1.38874</td>\n",
-       "      <td>-0.648748</td>\n",
-       "      <td>-0.908732</td>\n",
-       "      <td>-0.599374</td>\n",
-       "      <td>-0.192662</td>\n",
-       "      <td>0.661537</td>\n",
-       "      <td>-0.187065</td>\n",
-       "      <td>-0.194867</td>\n",
-       "      <td>-0.127014</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.564266</td>\n",
-       "      <td>-0.422715</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>41.664</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Video Length USA%_veiws IN%_views Other_country%_ views  Com­ments ad­ded  \\\n",
-       "0      2.579757   -1.44081   1.50307               0.28212          2.734322   \n",
-       "1     -0.599770   -1.15966  -1.19712               2.14297         -0.296311   \n",
-       "2      4.219474    0.71106  -1.08417              0.133307         -0.556079   \n",
-       "3     -0.554452   -1.33799    1.2309               0.39325         -0.317958   \n",
-       "4     -0.439095    1.38874 -0.648748             -0.908732         -0.599374   \n",
-       "\n",
-       "     Shares  Av­er­age per­cent­age viewed (%)     Views  Watch time (hours)  \\\n",
-       "0 -0.233125                          -1.577538 -0.254334           -0.250611   \n",
-       "1 -0.185918                           0.933759 -0.231628           -0.258198   \n",
-       "2 -0.233125                          -1.918310 -0.254942           -0.263825   \n",
-       "3 -0.218289                           0.606170 -0.233074           -0.258683   \n",
-       "4 -0.192662                           0.661537 -0.187065           -0.194867   \n",
-       "\n",
-       "   Sub­scribers  ...  Reply_Comment_Count  Like_Comment_Count  Monday  \\\n",
-       "0     -0.178416  ...            -0.564266           -0.404023       0   \n",
-       "1     -0.175695  ...            -0.216780           -0.104950       1   \n",
-       "2     -0.183254  ...            -0.216780           -0.366639       0   \n",
-       "3     -0.172974  ...             0.130706           -0.310563       0   \n",
-       "4     -0.127014  ...            -0.564266           -0.422715       0   \n",
-       "\n",
-       "   Saturday  Sunday  Thursday  Tuesday  Wednesday  DateScience?  \\\n",
-       "0         1       0         0        0          0             0   \n",
-       "1         0       0         0        0          0             0   \n",
-       "2         0       0         0        0          0             0   \n",
-       "3         0       0         0        0          0             0   \n",
-       "4         1       0         0        0          0             1   \n",
-       "\n",
-       "   Your es­tim­ated rev­en­ue (USD)  \n",
-       "0                             5.318  \n",
-       "1                            16.549  \n",
-       "2                             5.929  \n",
-       "3                            25.224  \n",
-       "4                            41.664  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_df.head()"
+    "s3_resource.Object(BUCKET, 'training_df.csv').put(Body = csv_buffer.getvalue())\n",
+    "\n",
+    "# uploading validation to S3 bucket\n",
+    "csv_buffer = StringIO()\n",
+    "valid.to_csv(csv_buffer)\n",
+    "s3_resource = boto3.resource('s3')\n",
+    "s3_resource.Object(BUCKET, 'validation_df.csv').put(Body = csv_buffer.getvalue())\n",
+    "\n",
+    "# uploading testing to S3 bucket\n",
+    "csv_buffer = StringIO()\n",
+    "test.to_csv(csv_buffer)\n",
+    "s3_resource = boto3.resource('s3')\n",
+    "s3_resource.Object(BUCKET, 'testing_df.csv').put(Body = csv_buffer.getvalue())"
    ]
   }
  ],
